# NAiSP-projekt

./: API.md  ARCHITECTURE.md  CMakeLists.txt  README.md  main.c
build_linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  custom_type_test_program  demo_program  int_test_program  string_test_program  test_program
include/: common.h  linear_framework.h  list.h  queue.h  stack.h  utils.h
include/internal/: list_doubly_internal.h  list_internal.h  list_singly_internal.h  queue_array_internal.h  queue_internal.h  queue_list_internal.h  stack_array_internal.h  stack_internal.h  stack_list_internal.h
src/: linear_framework.c  list.c  list_doubly.c  list_singly.c  queue.c  queue_array.c  queue_list.c  stack.c  stack_array.c  stack_list.c  utils.c
tests/: custom_type_test.c  int_test.c  main_test.c  string_test.c
